--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "motion": "^12.23.26",
-    "next": "16.0.3",
+    "next": "^16.1.1",
     "ogl": "^1.0.11",
-    "react": "19.2.0",
+    "react": "^19.2.3",
     "react-day-picker": "9.8.0",
-    "react-dom": "19.2.0",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
